--- a/result.html
+++ b/result.html
@@ -576,8 +576,8 @@ var ditu ="streets";
 		<div id="mapSwitch1"></div>
 		<div id="id_div">
 			<p>
-				<a href="http://127.0.0.1:8020/last/query_yizhi.html?__hbt=1561103825454" target="_blank">查询遗址点</a>
-				<a href="http://127.0.0.1:8020/last/tour_route.html?__hbt=1561103790303" target="_blank">武汉5日游经典路线</a>
+				<a href="https://baizhixy.github.io/map/query_yizhi.html" target="_blank">查询遗址点</a>
+				<a href="https://baizhixy.github.io/map/tour_route.html" target="_blank">武汉5日游经典路线</a>
 			</p>
 		</div>
   <span class="layerToggle0"><input type="checkbox" id="riversLayer">河流</span>
